--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,8 @@
     <string name="weight_label">Your weight in kg</string>
     <string name="height_label">Your height in cm</string>
     <string name="button_calculate">Calculate</string>
-    <string name="your_core">Calculate</string>
+    <string name="your_score">Your Score</string>
     <string name="reset">Reset</string>
     <string name="share">Share</string>
+    <string name="ideal_state">Congratulations! Your weight is ideal</string>
 </resources>
