--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,10 @@
     <string name="reset">Reset</string>
     <string name="share">Share</string>
     <string name="ideal_state">Congratulations! Your weight is ideal</string>
+    <string name="under_weight">Under Weight</string>
+    <string name="normal_weight">Normal Weight</string>
+    <string name="over_weight">Class I Obesity</string>
+    <string name="obesity">Class II Obesity</string>
+    <string name="morbid_obesity">Class III Morbid Obesity</string>
+
 </resources>
